@startuml browser_scheduler_architecture
!theme plain
skinparam backgroundColor #FEFEFE
skinparam componentStyle rectangle
skinparam packageStyle folder

' 标题
title browser_scheduler - 浏览器自动化任务调度框架

' 核心模型层（models.py）
package "models.py" {
    class Task {
        +id: str
        +data: str
        +status: TaskStatus
        +output_path: Path
        +retry_count: int
        +error: str
        +extra: dict
        --
        +to_dict(): dict
        +from_dict(): Task
        +from_file(path): Task
    }

    enum TaskStatus {
        PENDING
        RUNNING
        COMPLETED
        FAILED
    }

    class TaskStore {
        +input_dir: Path
        +output_dir: Path
        +json_file: Path
        --
        +add(task)
        +get(id): Task
        +remove(id): bool
        +all(): List[Task]
        +filter(status): List[Task]
        +save()
        +stats: dict
        +scan_files(pattern, extractor, output_ext): int
        +reset_failed(): int
        --
        -_load()
        -_save()
        -_clean_content(text): str
    }

    TaskStore ..> Task : manages
}

' 执行上下文（handlers.py）
package "handlers.py" {
    class Context {
        +task: Task
        +page: Any
    }

    class Result {
        +success: bool
        +error: str
    }

    abstract class Handler {
        +{abstract} execute(ctx: Context): Result
    }

    Context ..> Task : contains
    Handler ..> Context : uses
    Handler ..> Result : returns
}

' 浏览器管理（browser.py）
package "browser.py" {
    class BrowserManager {
        +storage_path: Path
        +headless: bool
        --
        +launch()
        +new_page(): Page
        +close()
        +login_sync(login_url)
    }
}

' 执行器（executor.py）
package "executor.py" {
    class ExecutionResult {
        +total: int
        +completed: int
        +failed: int
        +duration_seconds: float
    }

    abstract class BaseExecutor {
        +store: TaskStore
        +browser: BrowserManager
        --
        +run_task(task_id): Task
        +run_all(on_progress): ExecutionResult
        --
        #run_single_task(task, page): Task
    }

    BaseExecutor ..> TaskStore : uses
    BaseExecutor ..> BrowserManager : uses
    BaseExecutor ..> ExecutionResult : returns
}

' 重试机制（retry.py）
package "retry.py" {
    class retry {
        +{static} async call(fn, max_retries, base_delay): RetryResult
    }

    class RetryResult {
        +success: bool
        +error: str
        +attempts: int
    }

    retry ..> RetryResult : returns
}

' 工具函数（utils.py）
package "utils.py" {
    class BrowserUtils {
        +{static} insert_text_with_newlines(page, selector, text)
        +{static} clear_contenteditable(page, selector)
    }
}

' 外部依赖
package "外部依赖" #LightBlue {
    class "playwright.async_api" as Playwright {
        Browser
        BrowserContext
        Page
    }
}

BrowserManager ..> Playwright : uses
Handler ..> Playwright : uses

@enduml
